--- a/app/config/secrets.env
+++ b/app/config/secrets.env
@@ -1,59 +1,2 @@
-# ==========================
-#  JAIBOT LITE — Git Ignore
-# ==========================
-
-# --- Python ---
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.so
-*.egg
-*.egg-info/
-build/
-dist/
-
-# --- Virtual environments ---
-.venv/
-env/
-venv/
-ENV/
-
-# --- Secrets and configuration ---
-*.env
-*.yaml
-*.yml
-!settings.yaml        # mantenemos settings.yaml porque no contiene secretos
-app/config/secrets.env
-secrets/
-token.json
-credentials.json
-
-# --- Logs & temp files ---
-*.log
-logs/
-*.tmp
-*.bak
-*.swp
-
-# --- Streamlit cache ---
-.streamlit/
-.cache/
-__pycache__/
-
-# --- macOS & VSCode ---
-.DS_Store
-.vscode/
-.idea/
-
-# --- Node / n8n ---
-node_modules/
-.n8n/
-.npm/
-npm-debug.log*
-
-# --- Other ---
-*.sqlite3
-*.db
-*.tar.gz
-
+OPENAI_API_KEY=tu_api_key_aqui
+N8N_WEBHOOK_URL=http://127.0.0.1:5678/webhook-test/jaibot_router
